# change-current-dir-nt

./: .gitmodules  CMakeLists.txt  version.c
